--- a/uitest/src/main/resources/com/vaadin/tests/themes/valo/ResponsiveStylesDesign.html
+++ b/uitest/src/main/resources/com/vaadin/tests/themes/valo/ResponsiveStylesDesign.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
  <body>
-  <v-vertical-layout size-auto="true">
+  <v-vertical-layout size-auto="true" margin="false" spacing="false">
   <v-vertical-layout spacing="true" size-auto="true" margin="true">
 
    <v-css-layout _id="narrow" caption="801-1100px = narrow menu" width="801px" height="200px">
-    <v-horizontal-layout style-name="valo-menu-responsive" responsive="true" size-full="true">
+    <v-horizontal-layout style-name="valo-menu-responsive" responsive="true" size-full="true" spacing="false">
      <v-css-layout style-name="valo-menu">
       <v-css-layout style-name="valo-menu-part">
-       <v-horizontal-layout style-name="valo-menu-title" width-full="true" >
+       <v-horizontal-layout style-name="valo-menu-title" width-full="true" spacing="false">
         <v-label size-auto="true"  :middle="" :expand="">
           The
          <strong>Application</strong>
@@ -30,10 +30,10 @@
    </v-css-layout>
    
    <v-css-layout _id="wide" caption="Over 1100px = wide menu" width="1101px" height="200px">
-    <v-horizontal-layout style-name="valo-menu-responsive" responsive="true" size-full="true">
+    <v-horizontal-layout style-name="valo-menu-responsive" responsive="true" size-full="true" spacing="false">
      <v-css-layout style-name="valo-menu">
       <v-css-layout style-name="valo-menu-part">
-       <v-horizontal-layout style-name="valo-menu-title" width-full="true" >
+       <v-horizontal-layout style-name="valo-menu-title" width-full="true"  spacing="false">
         <v-label size-auto="true"  :middle="" :expand="">
           The
          <strong>Application</strong>
@@ -53,12 +53,12 @@
      <v-vertical-layout spacing="true" margin="true"  :expand=""></v-vertical-layout>
     </v-horizontal-layout>
    </v-css-layout>
- </v-vertical-layout>  
+ </v-vertical-layout>
       <v-css-layout _id="collapsed" caption="Collapsed menu w/ hover" width="500px" height="200px">
-    <v-horizontal-layout style-name="valo-menu-responsive" responsive="true" size-full="true">
+    <v-horizontal-layout style-name="valo-menu-responsive" responsive="true" size-full="true"  spacing="false">
      <v-css-layout style-name="valo-menu valo-menu-hover">
       <v-css-layout style-name="valo-menu-part">
-       <v-horizontal-layout style-name="valo-menu-title" width-full="true">
+       <v-horizontal-layout style-name="valo-menu-title" width-full="true"  spacing="false">
         <v-label size-auto="true" :middle="" :expand="">
           The
          <strong>Application</strong>
