Fixed issue in polyfill when not using "snapback"

--- a/all/src/main/resources/WebContent/license.html
+++ b/all/src/main/resources/WebContent/license.html
@@ -189,8 +189,8 @@
             <td><a href="licenses/the-mit-license.txt">The MIT License</a></td>
           </tr>
           <tr>
-            <td><a href="https://github.com/timruffles/ios-html5-drag-drop-shim/blob/master/LICENSE">drag-drop-polyfill</a>**</td>
-            <td><a href="licenses/the-mit-license.txt">The MIT License</a></td>
+            <td><a href="https://github.com/timruffles/ios-html5-drag-drop-shim">drag-drop-polyfill</a>**</td>
+            <td><a href="licenses/bsd-2-clause-drag-drop-polyfill.txt">BSD-2-clause</a></td>
           </tr>
         </tbody>
       </table>
